--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
-  text-align: center;
+/* Navbar */
+
+.nav-container{
+  padding: 0 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+  background-color: rgb(3,37,65);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Landing Page */
+.landing-page{
+  height: 350px;
+  background-image: url("https://www.themoviedb.org/t/p/w1920_and_h600_multi_faces_filter(duotone,032541,01b4e4)/bcT8CaBIj086WVD7K529h78eujb.jpg");
+  object-fit: cover;
+  background-size: cover; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.landing-page .form-control{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-radius: 20px 0 0 20px;
+  height: 45px;
+}
+
+.landing-page .form-control:focus{
+  border: none;
+}
+
+#basic-addon2{
+  display: flex;
+  justify-content: center;
+  position:relative;
+  color: white; 
+  height: 45px;
+  width: 100px;
+  margin-left: -18px;
+  background: linear-gradient(to right, rgba(30,213,169) 0%, rgba(1,180,228));
+  border-radius: 25px;
+  overflow: revert-layer;
+  border: none;
+  text-decoration: bold;
+
+}
+
+/* What's Poppular */
+
+.whats-poppular{
+  margin: 30px 0;
+}
+
+.heading{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.tabs{
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  border: 1px solid;
+  border-radius: 50px;
+  font-size: 1rem;
+  font-family: "Arial", sans-serif;
+  font-weight: bold;
+}
+
+.tabs button{
+  padding: 1px 20px;
+  border: none;
+  background-color:inherit;
+}
+
+.tabs button:hover{
+  background-color: rgb(3,37,65);
+  border-radius: 50px;
+
+}
+
+.tabs button span:hover{
+  background: linear-gradient(to right, rgba(30,213,169) 0%, rgba(1,180,228) 100%);;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  height: inherit;
+  width: inherit;
+}
+
+.scrollmenu {
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.scrollmenu::-webkit-scrollbar {
+  height: 8px;
+  border: 1px solid white;
+}
+
+.scrollmenu::-webkit-scrollbar-track {
+  margin-top: 5px;
+}
+ 
+.scrollmenu::-webkit-scrollbar-thumb {
+  background-color: rgb(219,219,219);
+  border-radius: 50px;
+}
+
+.movie_poster{
+  width: 150px;
+}
+
+.movie_poster .title{
+  font-size: 1em;
+}
+
+.modal{
+  /* width: 80%; */
+}
+
+
+
+
+/* global */
+
+body, html{
+  color: black;
+}
+
+.container{
+  /* width: 100%; */
+  padding: 0 !important;  
+}
+
+.wrapper{
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-icons{
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav li{
+  padding: auto;
+  padding-right: 15px;
+  padding-left : 15px;
 }
+
+/* dropdown */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  background-color: rgb(248, 234, 234);
+  border-radius: 5%;
+  margin-top: 5px;
+  padding: 10px;
+  display: none;
+  position: absolute;
+  min-width: 170px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 5px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;border-radius: 5%;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {text-decoration: bold;}
+
+/* 
+@font-face {
+  font-family: myFirstFont;
+  src: url(sansation_light.woff);
+} */
